--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@graphql-tools/schema": "^10.0.23",
     "apollo-server-express": "^3.13.0",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^4.18.2",
@@ -25,7 +26,9 @@
     "mongoose": "^8.16.1",
     "multer": "^2.0.1",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "react-chartjs-2": "^5.3.0",
+    "stripe": "^18.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
